--- a/fwdpp/ts/Makefile.in
+++ b/fwdpp/ts/Makefile.in
@@ -287,7 +287,8 @@ pkginclude_HEADERS = definitions.hpp \
 			marginal_tree_functions.hpp \
 			decapitate.hpp \
 			exceptions.hpp \
-			mutation_tools.hpp
+			mutation_tools.hpp \
+			table_types.hpp
 
 all: all-am
 
