--- a/fwdpp/ts/Makefile.in
+++ b/fwdpp/ts/Makefile.in
@@ -288,7 +288,8 @@ pkginclude_HEADERS = definitions.hpp \
 			decapitate.hpp \
 			exceptions.hpp \
 			mutation_tools.hpp \
-			table_types.hpp
+			table_types.hpp \
+			visit_sites.hpp
 
 all: all-am
 
