--- a/testsuite/Makefile.in
+++ b/testsuite/Makefile.in
@@ -130,7 +130,8 @@ am__tree_sequences_tree_sequence_tests_SOURCES_DIST =  \
 	tree_sequences/test_node_children_traversal.cc \
 	tree_sequences/independent_implementations.cc \
 	tree_sequences/test_generate_data_matrix.cc \
-	tree_sequences/test_table_collection.cc
+	tree_sequences/test_table_collection.cc \
+	tree_sequences/test_visit_sites.cc
 @BUNIT_TEST_PRESENT_TRUE@am_tree_sequences_tree_sequence_tests_OBJECTS = tree_sequences/tree_sequence_tests.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	tree_sequences/test_generate_offspring.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	tree_sequences/test_preorder_node_traversal.$(OBJEXT) \
@@ -143,7 +144,8 @@ am__tree_sequences_tree_sequence_tests_SOURCES_DIST =  \
 @BUNIT_TEST_PRESENT_TRUE@	tree_sequences/test_node_children_traversal.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	tree_sequences/independent_implementations.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	tree_sequences/test_generate_data_matrix.$(OBJEXT) \
-@BUNIT_TEST_PRESENT_TRUE@	tree_sequences/test_table_collection.$(OBJEXT)
+@BUNIT_TEST_PRESENT_TRUE@	tree_sequences/test_table_collection.$(OBJEXT) \
+@BUNIT_TEST_PRESENT_TRUE@	tree_sequences/test_visit_sites.$(OBJEXT)
 tree_sequences_tree_sequence_tests_OBJECTS =  \
 	$(am_tree_sequences_tree_sequence_tests_OBJECTS)
 tree_sequences_tree_sequence_tests_LDADD = $(LDADD)
@@ -235,6 +237,7 @@ am__depfiles_remade = fixtures/$(DEPDIR)/sugar_fixtures.Po \
 	tree_sequences/$(DEPDIR)/test_sample_traversal.Po \
 	tree_sequences/$(DEPDIR)/test_table_collection.Po \
 	tree_sequences/$(DEPDIR)/test_tree_visitor.Po \
+	tree_sequences/$(DEPDIR)/test_visit_sites.Po \
 	tree_sequences/$(DEPDIR)/tree_sequence_tests.Po \
 	unit/$(DEPDIR)/extensions_callbacksTest.Po \
 	unit/$(DEPDIR)/extensions_regionsTest.Po \
@@ -662,7 +665,8 @@ top_srcdir = @top_srcdir@
 @BUNIT_TEST_PRESENT_TRUE@										tree_sequences/test_node_children_traversal.cc \
 @BUNIT_TEST_PRESENT_TRUE@										tree_sequences/independent_implementations.cc \
 @BUNIT_TEST_PRESENT_TRUE@										tree_sequences/test_generate_data_matrix.cc \
-@BUNIT_TEST_PRESENT_TRUE@										tree_sequences/test_table_collection.cc
+@BUNIT_TEST_PRESENT_TRUE@										tree_sequences/test_table_collection.cc \
+@BUNIT_TEST_PRESENT_TRUE@										tree_sequences/test_visit_sites.cc
 
 @BUNIT_TEST_PRESENT_TRUE@AM_CXXFLAGS = -W -Wall
 all: all-am
@@ -773,6 +777,9 @@ tree_sequences/test_generate_data_matrix.$(OBJEXT):  \
 tree_sequences/test_table_collection.$(OBJEXT):  \
 	tree_sequences/$(am__dirstamp) \
 	tree_sequences/$(DEPDIR)/$(am__dirstamp)
+tree_sequences/test_visit_sites.$(OBJEXT):  \
+	tree_sequences/$(am__dirstamp) \
+	tree_sequences/$(DEPDIR)/$(am__dirstamp)
 
 tree_sequences/tree_sequence_tests$(EXEEXT): $(tree_sequences_tree_sequence_tests_OBJECTS) $(tree_sequences_tree_sequence_tests_DEPENDENCIES) $(EXTRA_tree_sequences_tree_sequence_tests_DEPENDENCIES) tree_sequences/$(am__dirstamp)
 	@rm -f tree_sequences/tree_sequence_tests$(EXEEXT)
@@ -876,6 +883,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/test_sample_traversal.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/test_table_collection.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/test_tree_visitor.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/test_visit_sites.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/tree_sequence_tests.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/extensions_callbacksTest.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/extensions_regionsTest.Po@am__quote@ # am--include-marker
@@ -1275,6 +1283,7 @@ distclean: distclean-am
 	-rm -f tree_sequences/$(DEPDIR)/test_sample_traversal.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_table_collection.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_tree_visitor.Po
+	-rm -f tree_sequences/$(DEPDIR)/test_visit_sites.Po
 	-rm -f tree_sequences/$(DEPDIR)/tree_sequence_tests.Po
 	-rm -f unit/$(DEPDIR)/extensions_callbacksTest.Po
 	-rm -f unit/$(DEPDIR)/extensions_regionsTest.Po
@@ -1362,6 +1371,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f tree_sequences/$(DEPDIR)/test_sample_traversal.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_table_collection.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_tree_visitor.Po
+	-rm -f tree_sequences/$(DEPDIR)/test_visit_sites.Po
 	-rm -f tree_sequences/$(DEPDIR)/tree_sequence_tests.Po
 	-rm -f unit/$(DEPDIR)/extensions_callbacksTest.Po
 	-rm -f unit/$(DEPDIR)/extensions_regionsTest.Po
