--- a/testsuite/Makefile.in
+++ b/testsuite/Makefile.in
@@ -132,7 +132,8 @@ am__tree_sequences_tree_sequence_tests_SOURCES_DIST =  \
 	tree_sequences/test_generate_data_matrix.cc \
 	tree_sequences/test_table_collection.cc \
 	tree_sequences/test_visit_sites.cc \
-	tree_sequences/test_site_visitor.cc
+	tree_sequences/test_site_visitor.cc \
+	tree_sequences/test_marginal_tree.cc
 @BUNIT_TEST_PRESENT_TRUE@am_tree_sequences_tree_sequence_tests_OBJECTS = tree_sequences/tree_sequence_tests.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	tree_sequences/test_generate_offspring.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	tree_sequences/test_preorder_node_traversal.$(OBJEXT) \
@@ -147,7 +148,8 @@ am__tree_sequences_tree_sequence_tests_SOURCES_DIST =  \
 @BUNIT_TEST_PRESENT_TRUE@	tree_sequences/test_generate_data_matrix.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	tree_sequences/test_table_collection.$(OBJEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	tree_sequences/test_visit_sites.$(OBJEXT) \
-@BUNIT_TEST_PRESENT_TRUE@	tree_sequences/test_site_visitor.$(OBJEXT)
+@BUNIT_TEST_PRESENT_TRUE@	tree_sequences/test_site_visitor.$(OBJEXT) \
+@BUNIT_TEST_PRESENT_TRUE@	tree_sequences/test_marginal_tree.$(OBJEXT)
 tree_sequences_tree_sequence_tests_OBJECTS =  \
 	$(am_tree_sequences_tree_sequence_tests_OBJECTS)
 tree_sequences_tree_sequence_tests_LDADD = $(LDADD)
@@ -231,6 +233,7 @@ am__depfiles_remade = fixtures/$(DEPDIR)/sugar_fixtures.Po \
 	tree_sequences/$(DEPDIR)/test_decapitate.Po \
 	tree_sequences/$(DEPDIR)/test_generate_data_matrix.Po \
 	tree_sequences/$(DEPDIR)/test_generate_offspring.Po \
+	tree_sequences/$(DEPDIR)/test_marginal_tree.Po \
 	tree_sequences/$(DEPDIR)/test_marginal_tree_statistics.Po \
 	tree_sequences/$(DEPDIR)/test_node_children_traversal.Po \
 	tree_sequences/$(DEPDIR)/test_node_traversal_order_adl.Po \
@@ -670,7 +673,8 @@ top_srcdir = @top_srcdir@
 @BUNIT_TEST_PRESENT_TRUE@										tree_sequences/test_generate_data_matrix.cc \
 @BUNIT_TEST_PRESENT_TRUE@										tree_sequences/test_table_collection.cc \
 @BUNIT_TEST_PRESENT_TRUE@										tree_sequences/test_visit_sites.cc \
-@BUNIT_TEST_PRESENT_TRUE@										tree_sequences/test_site_visitor.cc
+@BUNIT_TEST_PRESENT_TRUE@										tree_sequences/test_site_visitor.cc \
+@BUNIT_TEST_PRESENT_TRUE@										tree_sequences/test_marginal_tree.cc
 
 @BUNIT_TEST_PRESENT_TRUE@AM_CXXFLAGS = -W -Wall
 all: all-am
@@ -787,6 +791,9 @@ tree_sequences/test_visit_sites.$(OBJEXT):  \
 tree_sequences/test_site_visitor.$(OBJEXT):  \
 	tree_sequences/$(am__dirstamp) \
 	tree_sequences/$(DEPDIR)/$(am__dirstamp)
+tree_sequences/test_marginal_tree.$(OBJEXT):  \
+	tree_sequences/$(am__dirstamp) \
+	tree_sequences/$(DEPDIR)/$(am__dirstamp)
 
 tree_sequences/tree_sequence_tests$(EXEEXT): $(tree_sequences_tree_sequence_tests_OBJECTS) $(tree_sequences_tree_sequence_tests_DEPENDENCIES) $(EXTRA_tree_sequences_tree_sequence_tests_DEPENDENCIES) tree_sequences/$(am__dirstamp)
 	@rm -f tree_sequences/tree_sequence_tests$(EXEEXT)
@@ -882,6 +889,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/test_decapitate.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/test_generate_data_matrix.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/test_generate_offspring.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/test_marginal_tree.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/test_marginal_tree_statistics.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/test_node_children_traversal.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/test_node_traversal_order_adl.Po@am__quote@ # am--include-marker
@@ -1283,6 +1291,7 @@ distclean: distclean-am
 	-rm -f tree_sequences/$(DEPDIR)/test_decapitate.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_generate_data_matrix.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_generate_offspring.Po
+	-rm -f tree_sequences/$(DEPDIR)/test_marginal_tree.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_marginal_tree_statistics.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_node_children_traversal.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_node_traversal_order_adl.Po
@@ -1372,6 +1381,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f tree_sequences/$(DEPDIR)/test_decapitate.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_generate_data_matrix.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_generate_offspring.Po
+	-rm -f tree_sequences/$(DEPDIR)/test_marginal_tree.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_marginal_tree_statistics.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_node_children_traversal.Po
 	-rm -f tree_sequences/$(DEPDIR)/test_node_traversal_order_adl.Po
