Move split_breakpoints in into namespace ts::detail and require a function that "does the right thing" with new edges.

--- a/fwdpp/ts/detail/Makefile.am
+++ b/fwdpp/ts/detail/Makefile.am
@@ -1,4 +1,5 @@
 pkgincludedir=$(prefix)/include/fwdpp/ts/detail
 
 pkginclude_HEADERS= advance_marginal_tree_policies.hpp \
-	generate_data_matrix_details.hpp
+	generate_data_matrix_details.hpp \
+	split_breakpoints.hpp
