Draft implementation of edge buffers and add empty test file.

--- a/fwdpp/ts/Makefile.in
+++ b/fwdpp/ts/Makefile.in
@@ -290,7 +290,9 @@ pkginclude_HEADERS = definitions.hpp \
 			mutation_tools.hpp \
 			table_types.hpp \
 			visit_sites.hpp \
-			site_visitor.hpp
+			site_visitor.hpp \
+			edge_buffer.hpp \
+			diploid_edge_buffer.hpp
 
 all: all-am
 
