--- a/examples/Makefile.in
+++ b/examples/Makefile.in
@@ -93,7 +93,7 @@ noinst_PROGRAMS = diploid_ind$(EXEEXT) diploid_fixed_sh_ind$(EXEEXT) \
 	custom_diploid$(EXEEXT) $(am__EXEEXT_1)
 
 # examples based on tree sequences
-@BPO_PRESENT_TRUE@am__append_1 = wfts spatialts
+@BPO_PRESENT_TRUE@am__append_1 = wfts_integration_test spatialts
 @HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@am__append_2 = -DHAVE_LIBSEQUENCE
 @DEBUG_FALSE@am__append_3 = -DNDEBUG
 subdir = examples
@@ -107,7 +107,8 @@ mkinstalldirs = $(install_sh) -d
 CONFIG_HEADER = $(top_builddir)/config.h
 CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
-@BPO_PRESENT_TRUE@am__EXEEXT_1 = wfts$(EXEEXT) spatialts$(EXEEXT)
+@BPO_PRESENT_TRUE@am__EXEEXT_1 = wfts_integration_test$(EXEEXT) \
+@BPO_PRESENT_TRUE@	spatialts$(EXEEXT)
 PROGRAMS = $(noinst_PROGRAMS)
 am_K_linked_regions_extensions_OBJECTS =  \
 	K_linked_regions_extensions.$(OBJEXT)
@@ -145,11 +146,13 @@ am__spatialts_SOURCES_DIST = spatialts.cc
 @BPO_PRESENT_TRUE@am_spatialts_OBJECTS = spatialts.$(OBJEXT)
 spatialts_OBJECTS = $(am_spatialts_OBJECTS)
 spatialts_DEPENDENCIES =
-am__wfts_SOURCES_DIST = wfts.cc tree_sequence_examples_common.cc
-@BPO_PRESENT_TRUE@am_wfts_OBJECTS = wfts.$(OBJEXT) \
+am__wfts_integration_test_SOURCES_DIST = wfts_integration_test.cc \
+	tree_sequence_examples_common.cc
+@BPO_PRESENT_TRUE@am_wfts_integration_test_OBJECTS =  \
+@BPO_PRESENT_TRUE@	wfts_integration_test.$(OBJEXT) \
 @BPO_PRESENT_TRUE@	tree_sequence_examples_common.$(OBJEXT)
-wfts_OBJECTS = $(am_wfts_OBJECTS)
-wfts_DEPENDENCIES =
+wfts_integration_test_OBJECTS = $(am_wfts_integration_test_OBJECTS)
+wfts_integration_test_DEPENDENCIES =
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
 am__v_P_0 = false
@@ -171,7 +174,7 @@ am__depfiles_remade = ./$(DEPDIR)/K_linked_regions_extensions.Po \
 	./$(DEPDIR)/diploid_fixed_sh_ind.Po ./$(DEPDIR)/diploid_ind.Po \
 	./$(DEPDIR)/juvenile_migration.Po ./$(DEPDIR)/spatialts.Po \
 	./$(DEPDIR)/tree_sequence_examples_common.Po \
-	./$(DEPDIR)/wfts.Po
+	./$(DEPDIR)/wfts_integration_test.Po
 am__mv = mv -f
 CXXCOMPILE = $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) \
 	$(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
@@ -203,13 +206,13 @@ SOURCES = $(K_linked_regions_extensions_SOURCES) \
 	$(custom_diploid_SOURCES) $(custom_mutation_SOURCES) \
 	$(diploid_fixed_sh_ind_SOURCES) $(diploid_ind_SOURCES) \
 	$(juvenile_migration_SOURCES) $(spatialts_SOURCES) \
-	$(wfts_SOURCES)
+	$(wfts_integration_test_SOURCES)
 DIST_SOURCES = $(K_linked_regions_extensions_SOURCES) \
 	$(K_linked_regions_generalized_rec_SOURCES) \
 	$(custom_diploid_SOURCES) $(custom_mutation_SOURCES) \
 	$(diploid_fixed_sh_ind_SOURCES) $(diploid_ind_SOURCES) \
 	$(juvenile_migration_SOURCES) $(am__spatialts_SOURCES_DIST) \
-	$(am__wfts_SOURCES_DIST)
+	$(am__wfts_integration_test_SOURCES_DIST)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -341,8 +344,8 @@ K_linked_regions_generalized_rec_SOURCES = K_linked_regions_generalized_rec.cc c
 juvenile_migration_SOURCES = juvenile_migration.cc common_ind.hpp
 custom_mutation_SOURCES = custom_mutation.cc common_ind.hpp
 custom_diploid_SOURCES = custom_diploid.cc common_ind.hpp
-@BPO_PRESENT_TRUE@wfts_SOURCES = wfts.cc tree_sequence_examples_common.cc
-@BPO_PRESENT_TRUE@wfts_LDADD = -lboost_program_options
+@BPO_PRESENT_TRUE@wfts_integration_test_SOURCES = wfts_integration_test.cc tree_sequence_examples_common.cc
+@BPO_PRESENT_TRUE@wfts_integration_test_LDADD = -lboost_program_options
 @BPO_PRESENT_TRUE@spatialts_SOURCES = spatialts.cc
 @BPO_PRESENT_TRUE@spatialts_LDADD = -lboost_program_options
 AM_CPPFLAGS = -Wall -W -I. $(am__append_3)
@@ -418,9 +421,9 @@ spatialts$(EXEEXT): $(spatialts_OBJECTS) $(spatialts_DEPENDENCIES) $(EXTRA_spati
 	@rm -f spatialts$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(spatialts_OBJECTS) $(spatialts_LDADD) $(LIBS)
 
-wfts$(EXEEXT): $(wfts_OBJECTS) $(wfts_DEPENDENCIES) $(EXTRA_wfts_DEPENDENCIES) 
-	@rm -f wfts$(EXEEXT)
-	$(AM_V_CXXLD)$(CXXLINK) $(wfts_OBJECTS) $(wfts_LDADD) $(LIBS)
+wfts_integration_test$(EXEEXT): $(wfts_integration_test_OBJECTS) $(wfts_integration_test_DEPENDENCIES) $(EXTRA_wfts_integration_test_DEPENDENCIES) 
+	@rm -f wfts_integration_test$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(wfts_integration_test_OBJECTS) $(wfts_integration_test_LDADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
@@ -437,7 +440,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/juvenile_migration.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/spatialts.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/tree_sequence_examples_common.Po@am__quote@ # am--include-marker
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/wfts.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/wfts_integration_test.Po@am__quote@ # am--include-marker
 
 $(am__depfiles_remade):
 	@$(MKDIR_P) $(@D)
@@ -594,7 +597,7 @@ distclean: distclean-am
 	-rm -f ./$(DEPDIR)/juvenile_migration.Po
 	-rm -f ./$(DEPDIR)/spatialts.Po
 	-rm -f ./$(DEPDIR)/tree_sequence_examples_common.Po
-	-rm -f ./$(DEPDIR)/wfts.Po
+	-rm -f ./$(DEPDIR)/wfts_integration_test.Po
 	-rm -f Makefile
 distclean-am: clean-am distclean-compile distclean-generic \
 	distclean-tags
@@ -649,7 +652,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f ./$(DEPDIR)/juvenile_migration.Po
 	-rm -f ./$(DEPDIR)/spatialts.Po
 	-rm -f ./$(DEPDIR)/tree_sequence_examples_common.Po
-	-rm -f ./$(DEPDIR)/wfts.Po
+	-rm -f ./$(DEPDIR)/wfts_integration_test.Po
 	-rm -f Makefile
 maintainer-clean-am: distclean-am maintainer-clean-generic
 
