--- a/examples/Makefile.in
+++ b/examples/Makefile.in
@@ -90,9 +90,10 @@ noinst_PROGRAMS = diploid_ind$(EXEEXT) diploid_fixed_sh_ind$(EXEEXT) \
 	K_linked_regions_extensions$(EXEEXT) \
 	K_linked_regions_generalized_rec$(EXEEXT) \
 	juvenile_migration$(EXEEXT) custom_mutation$(EXEEXT) \
-	custom_diploid$(EXEEXT) $(am__EXEEXT_1)
+	custom_diploid$(EXEEXT) wfts_overlapping_generations$(EXEEXT) \
+	$(am__EXEEXT_1)
 
-# examples based on tree sequences
+# examples based on tree sequences that need boost program options
 @BPO_PRESENT_TRUE@am__append_1 = wfts_integration_test spatialts
 @HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@am__append_2 = -DHAVE_LIBSEQUENCE
 @DEBUG_FALSE@am__append_3 = -DNDEBUG
@@ -153,6 +154,12 @@ am__wfts_integration_test_SOURCES_DIST = wfts_integration_test.cc \
 @BPO_PRESENT_TRUE@	tree_sequence_examples_common.$(OBJEXT)
 wfts_integration_test_OBJECTS = $(am_wfts_integration_test_OBJECTS)
 wfts_integration_test_DEPENDENCIES =
+am_wfts_overlapping_generations_OBJECTS =  \
+	wfts_overlapping_generations.$(OBJEXT) wfevolvets.$(OBJEXT)
+wfts_overlapping_generations_OBJECTS =  \
+	$(am_wfts_overlapping_generations_OBJECTS)
+wfts_overlapping_generations_LDADD = $(LDADD)
+wfts_overlapping_generations_DEPENDENCIES =
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
 am__v_P_0 = false
@@ -174,7 +181,8 @@ am__depfiles_remade = ./$(DEPDIR)/K_linked_regions_extensions.Po \
 	./$(DEPDIR)/diploid_fixed_sh_ind.Po ./$(DEPDIR)/diploid_ind.Po \
 	./$(DEPDIR)/juvenile_migration.Po ./$(DEPDIR)/spatialts.Po \
 	./$(DEPDIR)/tree_sequence_examples_common.Po \
-	./$(DEPDIR)/wfts_integration_test.Po
+	./$(DEPDIR)/wfevolvets.Po ./$(DEPDIR)/wfts_integration_test.Po \
+	./$(DEPDIR)/wfts_overlapping_generations.Po
 am__mv = mv -f
 CXXCOMPILE = $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) \
 	$(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
@@ -206,13 +214,15 @@ SOURCES = $(K_linked_regions_extensions_SOURCES) \
 	$(custom_diploid_SOURCES) $(custom_mutation_SOURCES) \
 	$(diploid_fixed_sh_ind_SOURCES) $(diploid_ind_SOURCES) \
 	$(juvenile_migration_SOURCES) $(spatialts_SOURCES) \
-	$(wfts_integration_test_SOURCES)
+	$(wfts_integration_test_SOURCES) \
+	$(wfts_overlapping_generations_SOURCES)
 DIST_SOURCES = $(K_linked_regions_extensions_SOURCES) \
 	$(K_linked_regions_generalized_rec_SOURCES) \
 	$(custom_diploid_SOURCES) $(custom_mutation_SOURCES) \
 	$(diploid_fixed_sh_ind_SOURCES) $(diploid_ind_SOURCES) \
 	$(juvenile_migration_SOURCES) $(am__spatialts_SOURCES_DIST) \
-	$(am__wfts_integration_test_SOURCES_DIST)
+	$(am__wfts_integration_test_SOURCES_DIST) \
+	$(wfts_overlapping_generations_SOURCES)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -344,6 +354,7 @@ K_linked_regions_generalized_rec_SOURCES = K_linked_regions_generalized_rec.cc c
 juvenile_migration_SOURCES = juvenile_migration.cc common_ind.hpp
 custom_mutation_SOURCES = custom_mutation.cc common_ind.hpp
 custom_diploid_SOURCES = custom_diploid.cc common_ind.hpp
+wfts_overlapping_generations_SOURCES = wfts_overlapping_generations.cc wfevolvets.cc wfevolvets.hpp
 @BPO_PRESENT_TRUE@wfts_integration_test_SOURCES = wfts_integration_test.cc tree_sequence_examples_common.cc
 @BPO_PRESENT_TRUE@wfts_integration_test_LDADD = -lboost_program_options
 @BPO_PRESENT_TRUE@spatialts_SOURCES = spatialts.cc
@@ -425,6 +436,10 @@ wfts_integration_test$(EXEEXT): $(wfts_integration_test_OBJECTS) $(wfts_integrat
 	@rm -f wfts_integration_test$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(wfts_integration_test_OBJECTS) $(wfts_integration_test_LDADD) $(LIBS)
 
+wfts_overlapping_generations$(EXEEXT): $(wfts_overlapping_generations_OBJECTS) $(wfts_overlapping_generations_DEPENDENCIES) $(EXTRA_wfts_overlapping_generations_DEPENDENCIES) 
+	@rm -f wfts_overlapping_generations$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(wfts_overlapping_generations_OBJECTS) $(wfts_overlapping_generations_LDADD) $(LIBS)
+
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
 
@@ -440,7 +455,9 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/juvenile_migration.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/spatialts.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/tree_sequence_examples_common.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/wfevolvets.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/wfts_integration_test.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/wfts_overlapping_generations.Po@am__quote@ # am--include-marker
 
 $(am__depfiles_remade):
 	@$(MKDIR_P) $(@D)
@@ -597,7 +614,9 @@ distclean: distclean-am
 	-rm -f ./$(DEPDIR)/juvenile_migration.Po
 	-rm -f ./$(DEPDIR)/spatialts.Po
 	-rm -f ./$(DEPDIR)/tree_sequence_examples_common.Po
+	-rm -f ./$(DEPDIR)/wfevolvets.Po
 	-rm -f ./$(DEPDIR)/wfts_integration_test.Po
+	-rm -f ./$(DEPDIR)/wfts_overlapping_generations.Po
 	-rm -f Makefile
 distclean-am: clean-am distclean-compile distclean-generic \
 	distclean-tags
@@ -652,7 +671,9 @@ maintainer-clean: maintainer-clean-am
 	-rm -f ./$(DEPDIR)/juvenile_migration.Po
 	-rm -f ./$(DEPDIR)/spatialts.Po
 	-rm -f ./$(DEPDIR)/tree_sequence_examples_common.Po
+	-rm -f ./$(DEPDIR)/wfevolvets.Po
 	-rm -f ./$(DEPDIR)/wfts_integration_test.Po
+	-rm -f ./$(DEPDIR)/wfts_overlapping_generations.Po
 	-rm -f Makefile
 maintainer-clean-am: distclean-am maintainer-clean-generic
 
