Extract several functions from table_collection into new header file.  See #258
Closes #237 because the comparison function can now be generated
functionally for use elsewhere.

--- a/fwdpp/ts/Makefile.am
+++ b/fwdpp/ts/Makefile.am
@@ -7,6 +7,7 @@ pkginclude_HEADERS= definitions.hpp \
 			edge.hpp \
 			site.hpp \
 			table_collection.hpp \
+			table_collection_functions.hpp \
 			std_table_collection.hpp \
 			table_simplifier.hpp \
 			simplify_tables.hpp \
